# teacc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tea++.sln
diagnostics/: CMakeLists.txt  cpp.hint  diagnostics.vcxproj  diagnostics.vcxproj.filters  test.h
diagnostics/include/tea++/diagnostics/: application.h  diagnostic.h  dll.h  ll.h  rem.h
diagnostics/src/: application.cc  diagnostic.cc  rem.cc
logger/: CMakeLists.txt  logger.vcxproj
logger/include/tea++/logger/: logger.h  string_t.h
logger/src/: logger.cc  string_t.cc
teascript/: CMakeLists.txt  teascript.vcxproj  teascript.vcxproj.filters
teascript/include/tea++/teascript/: ll.h  type_t.h
teascript/include/tea++/teascript/compiler/: tr_unit.h
teascript/include/tea++/teascript/lexer/: lexer.h  token_t.h
teascript/src/: type_t.cc
teascript/src/compiler/: tr_unit.cc
teascript/src/lexer/: lexer.cc  token_t.cc
tests/: CMakeLists.txt
tests/src/: test.cc  test.h
tests/tests.utils/: tests.cc  tests.h  tests.utils.vcxproj
tests/utils/test.utils/: test.utils.vcxproj  test.utils.vcxproj.filters  tests.cc  tests.h
utils/: CMakeLists.txt  utils.vcxproj  utils.vcxproj.filters
utils/include/tea++/utils/: colors.h  dll.h  expect.h  ll.h  logger.h  rep.h  string_t.h  text.h
utils/src/: colors.cc  expect.cc  logger.cc  rep.cc  string_t.cc  text.cc
vault/: vault.vcxproj
